SDC-3358. Fix miniIT failsafe configuraiton
Change-Id: I75dad030c963062ad21f53169bc917cc9e4b4569
Reviewed-on: https://review.streamsets.net/3371
Reviewed-by: Jarcec Cecho <jarcec@streamsets.com>